# utah-sb60-calc

./: .gitignore  README.md  generate_post.py  pyproject.toml  setup.py
.github/workflows/: deploy-charts.yml
utah_sb60/: __init__.py  charts.py  household.py  reform.py  statewide.py
